# webclient

./: Cargo.toml
src/: command.rs  error.rs  lib.rs  request.rs
src/ws/: mod.rs  wsclient.rs
