[package]
name = "webclient"
version = "0.1.1"
edition = "2021"
authors = ["asbezier <asbezier@outlook.com>"]
publish = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/OpenBezier/webclient"
description = "webclient"

[dependencies]
thiserror = "1.0.44"
anyhow = "1.0.72"
tracing = "0.1.37"

clap = { version = "4.3.19", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing-appender = { version = "0.2.2" }
time = { version = "0.3.23", features = ["macros"] }


tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-native-roots",
] }

# tokio-tungstenite = { version = "0.19.0", features = ["rustls-tls-webpki-roots"]}
futures-channel = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }

tokio = { version = "1.29.1", default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
ctrlc = "3.4.0"
async-trait = "0.1.72"
dashmap = "6.0.1"
crossbeam = "0.8.2"
futures = "0.3.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
webproto = "0.1.0"

# url = { version = "2.4.0" }
http = { version = "1.0" }
